- Inicio crud aluno - Configurado H2 DB - Definido entidades

--- a/quarkus-example/src/main/resources/application.properties
+++ b/quarkus-example/src/main/resources/application.properties
@@ -1,2 +1,17 @@
-# Configuration file
-# key = value
+# configure datasource
+quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
+
+# configure hibernate
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.log.sql=true
+
+# log
+quarkus.log.console.level=DEBUG
+
+
+
+
+
+
