--- a/quarkus-example/pom.xml
+++ b/quarkus-example/pom.xml
@@ -53,6 +53,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-hibernate-orm</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
