Termino CRUD Aluno

--- a/quarkus-example/src/main/resources/application.properties
+++ b/quarkus-example/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 
 # configure hibernate
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 
 # log
