--- a/quarkus-example/src/main/resources/application.properties
+++ b/quarkus-example/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # configure datasource
-quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
-quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
+quarkus.datasource.url=jdbc:postgresql://0.0.0.0:5432/example?createDatabaseIfNotExist=true
+quarkus.datasource.driver= org.postgresql.Driver
+quarkus.datasource.username= postgres
+quarkus.datasource.password= postgres
 
 # configure hibernate
 quarkus.hibernate-orm.database.generation=update
