--- a/quarkus-example/src/main/docker/docker-compose.yml
+++ b/quarkus-example/src/main/docker/docker-compose.yml
@@ -1,12 +1,26 @@
-version: '3.4'
+version: '3'
 services:
-    app:
-      image: build_native
-      build: .
-      container_name: build_native
-      working_dir: /opt/quarkus_native/
-      volumes:
-        - ../../../:/opt/quarkus_native
-        - $HOME/.m2:/root/
-      command: >
-          bash -c "mvn package -Pnative -X"
+  postgres:
+    image: postgres
+    hostname: postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: example
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    ports:
+#      - "5555:80"
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+#      PGADMIN_DEFAULT_PASSWORD: admin
+#    restart: unless-stopped
+
+volumes:
+  postgres-data:
